feat: Improve Layers and code readability after challenge and rule behavior merging - MEED-2094 - Meeds-io/MIPs#49
This change will update Gamification Module Layers definition to ensure
to use BEst practices and cleaner API. In fact the
`GamificationActionHistory`, which is a JPA entity, was used in Service
layer instead of a proper DTO.
In addition, the suffix 'DTO' which is used inside a REST response was
removed and renamed from 'domainDTO' to 'program' to make the REST
responses more self-explanatory.
In addition to other multiple improvements such as, cleaning REST APIs
to not having duplicated RESTs doing the same thing for Challenges and
rules.
Finally, the Rule Drawer (Edit & View) has been updated to allow adding
dates on an automatic rule.